--- a/build.xml
+++ b/build.xml
@@ -16,16 +16,19 @@
 	-->
 	<path id="libsRef">
 <!-- we include these files with our dist instead of just linking to them -->
-		<fileset dir="Resources/lib">
+		<!--fileset dir="Resources/lib">
 			<include name="*.jar"/>
 			<include name="*/*.jar"/>
-		</fileset>
+		</fileset-->
 	</path>
 	
 	
 	
 	<target name="build">
 		<mkdir dir="build/classes"/>
+		<copy todir="build/classes">
+			<fileset dir="Resources" includes="au/**/*"/>
+		</copy>
 		
 		<javac srcdir="src" encoding="UTF-8" destdir="build/classes" debuglevel="lines,vars,source" classpathref="libsRef" includeantruntime="false" debug="true" source="1.5" target="1.5">
 			<compilerarg value="-Xlint:unchecked"/>
@@ -40,11 +43,10 @@
 		<mkdir dir="build/package"/>
 		<copy todir="build/package">
 			<fileset dir="build/classes" includes="**/*"/>
-			<fileset dir="Resources" includes="au/**/*"/>
 			<fileset dir="Resources" includes="logo.gif"/>
 			<fileset dir="Resources" includes="winicon.png"/>
 		</copy>
-			<jar destfile="build/SKGB-offline.jar" basedir="build/package" compress="false">
+		<jar destfile="build/SKGB-offline.jar" basedir="build/package" compress="false">
 			<manifest>
 				<attribute name="Main-Class" value="Gui"/>
 				<!--attribute name="Class-Path" value="lib/geotools-8.5/*"/-->
