SKGBoffline: packaging complete
git-svn-id: svn+ssh://cat/usr/local/svnreps/skgb/skgb-offline/trunk@646 31b05262-34a9-4923-903e-e8e313387d9b

--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 			<fileset dir="Resources" includes="au/**/*"/>
 		</copy>
 		
-		<javac srcdir="src" encoding="UTF-8" destdir="build/classes" debuglevel="lines,vars,source" classpathref="libsRef" includeantruntime="false" debug="true" source="1.5" target="1.5">
+		<javac srcdir="." includes="de/**/*.java" encoding="UTF-8" destdir="build/classes" debuglevel="lines,vars,source" classpathref="libsRef" includeantruntime="false" debug="true" source="1.5" target="1.5">
 			<compilerarg value="-Xlint:unchecked"/>
 			<compilerarg value="-Xlint:deprecation"/>
 		</javac>
@@ -48,7 +48,7 @@
 		</copy>
 		<jar destfile="build/SKGB-offline.jar" basedir="build/package" compress="false">
 			<manifest>
-				<attribute name="Main-Class" value="Gui"/>
+				<attribute name="Main-Class" value="de.skgb.offline.gui.Gui"/>
 				<!--attribute name="Class-Path" value="lib/geotools-8.5/*"/-->
 			</manifest>
 		</jar>
