--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,16 @@
 	<property name="javaversionsource" value="1.6"/>
 	<property name="javaversiontarget" value="1.6"/>
 	<property name="bootclasspath" value="/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/classes.jar"/>
+	<path id="javac-classpath">
+<!--
+		<fileset dir="${web.dir}/WEB-INF/lib">
+			<include name="*.jar"/>
+		</fileset>
+		<fileset dir="${appserver.lib}">
+			<include name="servlet*.jar"/>
+		</fileset>
+-->
+	</path>
 	
 	
 	
@@ -21,6 +31,7 @@
 		<javac srcdir="." includes="de/**/*.java" encoding="UTF-8" destdir="build/classes" debuglevel="lines,vars,source" includeantruntime="false" debug="true" source="${javaversionsource}" target="${javaversiontarget}" bootclasspath="${bootclasspath}">
 			<compilerarg value="-Xlint:unchecked"/>
 			<compilerarg value="-Xlint:deprecation"/>
+			<classpath refid="javac-classpath"/>
 		</javac>
 		
 	</target>
